RemoveParticipantTests
Tested that RemoveParticipantRequests are handled as expected