@@ -105,8 +105,7 @@ public record InputHandler(InputAgent inputAgent, OutputAgent out,
             out.addResponse(handleUserNameAvailableRequest(request));
         } else {
             System.out.println("Unknown handle: " + input
-                    .getClass()
-                    .toString());
+                    .getClass());
         }
     }
 
@@ -144,7 +143,7 @@ public record InputHandler(InputAgent inputAgent, OutputAgent out,
                 .filter(username -> username.startsWith(request.searchString()))
                 .filter(username -> !username.equals(request.sender()))
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> friends = usernames
                 .stream()
@@ -152,7 +151,7 @@ public record InputHandler(InputAgent inputAgent, OutputAgent out,
                         .getFriends()
                         .contains(username))
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> nonFriends = usernames
                 .stream()
@@ -249,10 +248,14 @@ public record InputHandler(InputAgent inputAgent, OutputAgent out,
             return new Unauthorized();
         }
 
+        // TODO: Should we have permissions in conversations?
+
         User user = data.getUser(request.participant());
         if (user == null) {
             return new NoSuchUser();
         }
+
+        // TODO: We should verify that the participant is in the conversation
 
         user.removeConversationID(request.id());
         con.removeUser(request.participant());
